<resources>
    <string name="app_name">Ping Pong Score Keeper</string>
    <string name="player_won_match">%1$s Won Match!</string>
    <string name="player_won_set">%1$s Won Set %2$d!</string>
    <string name="deuce">Deuce</string>
    <string name="initial_set_score">0</string>
    <string name="initial_sets_won">0</string>
    <string name="points_sets">Points | Sets</string>
    <string name="reset">Reset</string>
    <string name="new_game">New Game</string>
    <string name="empty_view_title_text">Start a new game</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="player_saved">player saved</string>
    <string name="add_players">Add players</string>
    <string name="choose_player">Choose Player</string>
    <string name="choose_players">Choose players</string>
    <string name="same_players_chosen">Chosen players are the same</string>
    <string name="add_set_values">Add set values</string>
    <string name="invalid_set_points">Set points are invalid</string>
    <string name="serve">Serve</string>
    <string name="sets">Sets</string>
    <string name="set">Set</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="three">3</string>
    <string name="eleven">11</string>
    <string name="add_game">Add</string>
    <string name="start_game">Start</string>
    <string name="test_player_one_name">Fred</string>
    <string name="test_player_two_name">Daniel</string>
    <string name="overview">Overview</string>
    <string name="name">Name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="set_one">Set 1</string>
    <string name="five">5</string>
    <string name="set_separator"> - </string>
    <string name="zero">0</string>
    <string name="test_player_one_serve">Fred *</string>
    <string name="test_match_date">2012/01/20</string>
    <string name="settings">Settings</string>
    <string name="enable_disable_option">Turn this option on or off</string>
    <string name="audio">Audio</string>
    <string name="restart">Restart</string>
</resources>
