<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.dhivo.android.pingpongmatchtracker.fragments.NewGameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/serve" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.dhivo.android.pingpongmatchtracker.customviews.NoDefaultSpinner
                    android:id="@+id/player_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:prompt="@string/choose_player" />

                <CheckBox
                    android:id="@+id/player_one_serve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <me.dhivo.android.pingpongmatchtracker.customviews.NoDefaultSpinner
                    android:id="@+id/player_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:prompt="@string/choose_player" />

                <CheckBox
                    android:id="@+id/player_two_serve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_gravity="center_horizontal"
                android:text="@string/sets" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/decrease" />

                <TextView
                    android:id="@+id/num_of_sets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/three"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/increase"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/increase" />

            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_gravity="center_horizontal"
                android:text="Set Points" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/decrease_set_points"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/decrease" />

                <TextView
                    android:id="@+id/num_of_sets_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/eleven"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/increase_set_points"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/increase" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/start_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:text="@string/start_game" />

                <Button
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:text="@string/add_game" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>